# readline-in-other-words

./: .gitignore  CHANGELOG.md  LICENSE  README.md  readline-in-other-words.cabal  stack.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: Echo.hs
src/Control/Effect/: Readline.hs
src/Control/Effect/Readline/: History.hs  Internal.hs
