cabal-version:  2.4
name:           readline-in-other-words
synopsis:       Readline effect for in-other-words.
version:        0.1.0.0
category:       User Interfaces, Effect
homepage:       https://github.com/lehmacdj/readline-in-other-words#readme
bug-reports:    https://github.com/lehmacdj/readline-in-other-words/issues
author:         Devin Lehmacher
maintainer:     Devin Lehmacher
copyright:      (c) 2021 Devin Lehmacher
license:        BSD-2-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md
  ChangeLog.md
description:
  This library provides effects for in-other-words offering the functionality of
  haskeline. Please see the README on GitHub at
  <https://github.com/lehmacdj/readline-in-other-words#readme> for more details.

common options
  ghc-options: -Wall -fplugin=Control.Effect.Plugin
  build-depends:
      base >=4.13 && <4.17
    , haskeline >=0.8.1 && <0.8.3
    , in-other-words >=0.2.0.0 && <0.2.1.0
    , in-other-words-plugin ==0.1.0.0
    , monad-control >=1.0 && <1.1
    -- ^ same bound as in-other-words
    , mtl >=2.2 && <2.3
    -- ^ same bound as in-other-words
  default-language: Haskell2010

common exe-options
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
  import: options
  hs-source-dirs:
    src
  exposed-modules:
    Control.Effect.Readline
    Control.Effect.Readline.History
    Control.Effect.Readline.Internal
  other-modules:
    Paths_readline_in_other_words
  autogen-modules:
    Paths_readline_in_other_words

executable echo-repl
  import: options
  import: exe-options
  hs-source-dirs: examples
  main-is: Echo.hs
  other-modules:
    Paths_readline_in_other_words
  autogen-modules:
    Paths_readline_in_other_words
  build-depends:
    readline-in-other-words
